<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:contentPadding="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_person_black"
            app:c_border="true"
            app:c_border_color="@color/CircularImageColorGray"
            app:c_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/moreBtn"
            android:layout_toEndOf="@id/profileIv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dobTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DOB"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_black"
            android:background="@null"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>