<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".RecordDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/profileTv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_person_black"
            app:c_border="true"
            app:c_border_width="1dp"
            app:c_border_color="@color/CircularImageColorGray"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2">
            <TableRow>
                <TextView
                    android:id="@+id/bioTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="top"
                    android:padding="10dp"
                    android:text="The bio info"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Name"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="User name"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/phoneTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="User Phone"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="User Email"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Date Added"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/dobTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="User Birth"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Date Added"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/addedDateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Time of added"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Date Update"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/updateDateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Time of updated"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>